# RadarSecurityResearch

./: .gitignore  README.md  startMATLAB_UbuntuOnly.sh
Experiments/: MUSIC_1D_initial_experiments.html  MUSIC_1D_initial_experiments.ipynb
FMCW_radar/: FMCW_radar_grc.grc  FMCW_radar_py.py  verify_imported_data.py  verity_imported_data.py
FMCW_radar_uhd/: CMakeLists.txt  Config_FMCW.json  Config_uhd.json  Config_uhd_100MHz.json  Config_uhd_100MHzBw.json  Config_uhd_attack.json  Config_uhd_attack_100MHz.json  Config_uhd_highbw.json  Config_uhd_highvres.json  main.cpp
FMCW_radar_uhd/src/: Attacker.hpp  BufferHandler.cpp  BufferHandler.hpp  CMakeLists.txt  FMCWHandler.cpp  FMCWHandler.hpp  JSONHandler.cpp  JSONHandler.hpp  RADAR.hpp  USRPHandler.cpp  USRPHandler.hpp
FMCW_radar_uhd/src/attacking_subsystem/: AttackingSubsystem.hpp
FMCW_radar_uhd/src/sensing_subsystem/: CMakeLists.txt  EnergyDetector.hpp  SensingSubsystem.hpp  SpectrogramHandler.hpp
MATLAB/: MMWaveDevice.m  Post_Process_Radar_Data.mlx  READ_ADC_DATA_BIN_FILE.m
MATLAB/Simulink Model/: Attacker_revB.asv  Attacker_revB.m  Chirp_Slope_absolute_error_summary.csv  Chirp_Slope_relative_error_summary.csv  Compute_radar_settings.mlx  FMCW_Emulator_revA.m  Radar_Signal_Processing_attacks.mlx  Radar_Signal_Processing_verification.mlx  Radar_Signal_Processor_revA.asv  Radar_Signal_Processor_revA.m  Radar_revA.m  Radar_revB.m  Range_Spoofing_error_summary.csv  Simulation_reconfigurable.asv  Simulator_revA.m  (+35 more)
python_to_control_radar/: IWR1443_Config.py  IWR1443_Processor.py  IWR1443_Radar.py  IWR1443_Streamer.py  readData_IWR1443.py  test_demo.ipynb
(+40 files in other folders)
